# bettr-slurm-monitor

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
slurm_monitor/: __init__.py  main.py  tui.py
