[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slurm-monitor"
version = "1.0.0"
description = "Real-time GPU cluster monitoring tool for Slurm"
readme = "README.md"
authors = [
    {name = "Amey Agrawal", email = "amey@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "textual>=0.40.0",
    "requests>=2.28.0",
]
keywords = ["slurm", "gpu", "monitoring", "hpc", "cluster"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/AgrawalAmey/slurm-monitor"
Repository = "https://github.com/AgrawalAmey/slurm-monitor"
Issues = "https://github.com/AgrawalAmey/slurm-monitor/issues"

[project.scripts]
slurm-monitor = "slurm_monitor.tui:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["slurm_monitor*"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.black]
line-length = 100
target-version = ["py38"]